# openacc_solver

./: .gitignore  CMakeLists.txt  README.md
pyutils/: plot.py
src/: Grid2D.cpp  Grid2D.h  ODE.cpp  ODE.h  Particle.cpp  Particle.h  RK4.cpp  RK4.h  RK4Helper.cpp  RK4Helper.h  common.h  main.cpp
